import { NavigationContainer } from '@react-navigation/native'
import { act, render } from '@testing-library/react-native'
import React from 'react'

import { RootStack } from 'features/navigation/RootNavigator'
import { AlgoliaHit } from 'libs/algolia'
import {
  mockedAlgoliaResponse,
  digitalAlgoliaOffer,
  physicalAlgoliaOffer,
} from 'libs/algolia/mockedResponses/mockedAlgoliaResponse'
import { reactQueryProviderHOC } from 'tests/reactQueryProviderHOC'
import { flushAllPromises } from 'tests/utils'

import { Offer } from './Offer'

jest.mock('@react-navigation/native', () => jest.requireActual('@react-navigation/native'))
const defaultAlgoliaHit: AlgoliaHit = mockedAlgoliaResponse.hits[0]

jest.mock('features/auth/AuthContext', () => ({
  useAuthContext: jest.fn(() => ({ isLoggedIn: true })),
}))

describe('<Offer />', () => {
  it('should match snapshot for physical offer', async () => {
    const { toJSON } = await renderOfferPage(physicalAlgoliaOffer)
    expect(toJSON()).toMatchSnapshot()
  })

  it('should match snapshot for digital offer', async () => {
    const { toJSON } = await renderOfferPage(digitalAlgoliaOffer)
    expect(toJSON()).toMatchSnapshot()
  })
})

async function renderOfferPage(algoliaHit?: AlgoliaHit) {
  const wrapper = render(
    reactQueryProviderHOC(
      <NavigationContainer>
        <RootStack.Navigator initialRouteName="Offer">
          <RootStack.Screen
            name="Offer"
            component={Offer}
            initialParams={{ id: 'ABCDE', algoliaHit: algoliaHit ?? defaultAlgoliaHit }}
          />
        </RootStack.Navigator>
      </NavigationContainer>
    )
  )
  await act(async () => {
    await flushAllPromises()
  })
  return wrapper
}
