// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Offer /> should match snapshot for digital offer 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "zIndex": 1,
          },
          false,
        ]
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Offer
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTScrollView
                      style={
                        Array [
                          Object {},
                        ]
                      }
                    >
                      <View>
                        <View
                          customHeight={16}
                          style={
                            Array [
                              Object {
                                "height": 16,
                              },
                            ]
                          }
                        />
                        <View
                          style={
                            Array [
                              Object {
                                "flexBasis": 0,
                                "flexDirection": "row",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                            ]
                          }
                        >
                          <View
                            numberOfSpaces={6}
                            style={
                              Array [
                                Object {
                                  "width": 24,
                                },
                              ]
                            }
                          />
                          <View
                            accessible={true}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "alignItems": "center",
                                "aspectRatio": 1,
                                "backgroundColor": "#ffffff",
                                "borderColor": "#f5f5f5",
                                "borderRadius": 40,
                                "borderStyle": "solid",
                                "borderWidth": 1,
                                "justifyContent": "center",
                                "opacity": 1,
                                "shadowColor": "#151515",
                                "shadowOffset": Object {
                                  "height": 1,
                                  "width": 0,
                                },
                                "shadowOpacity": 0.15,
                                "shadowRadius": 1,
                                "width": 40,
                              }
                            }
                          >
                            <RNSVGSvgView
                              align="xMidYMid"
                              bbHeight={32}
                              bbWidth={32}
                              focusable={false}
                              height={32}
                              meetOrSlice={0}
                              minX={0}
                              minY={0}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "transparent",
                                    "borderWidth": 0,
                                  },
                                  Object {
                                    "flex": 0,
                                    "height": 32,
                                    "width": 32,
                                  },
                                ]
                              }
                              testID="icon-back"
                              vbHeight={32}
                              vbWidth={32}
                              width={32}
                            >
                              <RNSVGGroup>
                                <RNSVGGroup
                                  fill={null}
                                  propList={
                                    Array [
                                      "fill",
                                    ]
                                  }
                                >
                                  <RNSVGGroup
                                    fill={4279571733}
                                    propList={
                                      Array [
                                        "fill",
                                      ]
                                    }
                                  >
                                    <RNSVGGroup>
                                      <RNSVGGroup>
                                        <RNSVGPath
                                          d="M8.94 19.466c-.301.277-.778.266-1.065-.025-.287-.29-.276-.75.026-1.027l5.314-4.878c1.746-1.603 4.49-1.603 6.237 0l5.314 4.878c.302.277.313.737.026 1.027-.287.29-.764.302-1.065.025l-5.315-4.878c-1.164-1.069-2.993-1.069-4.158 0L8.94 19.466z"
                                          matrix={
                                            Array [
                                              -6.123233995736766e-17,
                                              1,
                                              1,
                                              6.123233995736766e-17,
                                              -0.3329999999999984,
                                              -0.3329999999999984,
                                            ]
                                          }
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGGroup>
                                </RNSVGGroup>
                              </RNSVGGroup>
                            </RNSVGSvgView>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "flexBasis": 0,
                                  "flexDirection": "row",
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                  "justifyContent": "flex-end",
                                },
                              ]
                            }
                          >
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "alignItems": "center",
                                  "aspectRatio": 1,
                                  "backgroundColor": "#ffffff",
                                  "borderColor": "#f5f5f5",
                                  "borderRadius": 40,
                                  "borderStyle": "solid",
                                  "borderWidth": 1,
                                  "justifyContent": "center",
                                  "opacity": 1,
                                  "shadowColor": "#151515",
                                  "shadowOffset": Object {
                                    "height": 1,
                                    "width": 0,
                                  },
                                  "shadowOpacity": 0.15,
                                  "shadowRadius": 1,
                                  "width": 40,
                                }
                              }
                            >
                              <RNSVGSvgView
                                align="xMidYMid"
                                bbHeight={32}
                                bbWidth={32}
                                fill="#151515"
                                focusable={false}
                                height={32}
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    Object {
                                      "flex": 0,
                                      "height": 32,
                                      "width": 32,
                                    },
                                  ]
                                }
                                testID="icon-share"
                                vbHeight={40}
                                vbWidth={40}
                                width={32}
                              >
                                <RNSVGGroup
                                  fill={4279571733}
                                  propList={
                                    Array [
                                      "fill",
                                    ]
                                  }
                                >
                                  <RNSVGPath
                                    d="M15.773 15.2c.346 0 .625.28.625.624 0 .317-.235.578-.54.62l-.085.005h-3.481c-.54 0-.983.41-1.037.936l-.005.106v11.625c0 .54.41.983.935 1.036l.107.006h15c.539 0 .983-.41 1.036-.935l.005-.107V17.491c0-.539-.41-.983-.935-1.036l-.106-.006h-3.034c-.345 0-.625-.28-.625-.625 0-.316.235-.577.54-.619l.085-.006h3.034c1.218 0 2.215.952 2.287 2.153l.004.14v11.624c0 1.219-.951 2.215-2.152 2.288l-.14.004h-15c-1.218 0-2.215-.951-2.287-2.152l-.004-.14V17.491c0-1.218.951-2.215 2.152-2.287l.14-.005h3.481zm4.065-8.532l.029.003c.024.003.049.008.073.013l.018.005c.024.007.049.015.073.025l.025.011c.05.023.097.053.14.09l.007.006.059.06 4.651 5.315c.228.26.201.655-.058.882-.237.207-.584.204-.816.006l-.066-.065-3.557-4.064v14.71c0 .345-.28.625-.625.625-.316 0-.578-.236-.619-.54l-.006-.085V8.955l-3.556 4.064c-.227.26-.622.286-.882.059-.236-.207-.28-.552-.114-.808l.055-.074 4.652-5.316.028-.03.03-.029.008-.006c.02-.017.034-.027.049-.037l-.056.043c.028-.024.057-.046.088-.064.014-.01.03-.017.045-.025s.03-.014.046-.02l.028-.011c.021-.007.043-.014.065-.019l.052-.01.039-.003h.095z"
                                  />
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                            <View
                              numberOfSpaces={3}
                              style={
                                Array [
                                  Object {
                                    "width": 12,
                                  },
                                ]
                              }
                            />
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "alignItems": "center",
                                  "aspectRatio": 1,
                                  "backgroundColor": "#ffffff",
                                  "borderColor": "#f5f5f5",
                                  "borderRadius": 40,
                                  "borderStyle": "solid",
                                  "borderWidth": 1,
                                  "justifyContent": "center",
                                  "opacity": 1,
                                  "shadowColor": "#151515",
                                  "shadowOffset": Object {
                                    "height": 1,
                                    "width": 0,
                                  },
                                  "shadowOpacity": 0.15,
                                  "shadowRadius": 1,
                                  "width": 40,
                                }
                              }
                            >
                              <RNSVGSvgView
                                align="xMidYMid"
                                bbHeight={32}
                                bbWidth={32}
                                focusable={false}
                                height={32}
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    Object {
                                      "flex": 0,
                                      "height": 32,
                                      "width": 32,
                                    },
                                  ]
                                }
                                testID="icon-favorite"
                                vbHeight={44}
                                vbWidth={44}
                                width={32}
                              >
                                <RNSVGGroup>
                                  <RNSVGDefs>
                                    <RNSVGLinearGradient
                                      gradient={
                                        Array [
                                          0,
                                          -15395563,
                                          1,
                                          -15395563,
                                        ]
                                      }
                                      gradientTransform={null}
                                      gradientUnits={0}
                                      name="prefix__a"
                                      x1="-42.969%"
                                      x2="153.672%"
                                      y1="52.422%"
                                      y2="52.422%"
                                    />
                                  </RNSVGDefs>
                                  <RNSVGGroup
                                    fill={null}
                                    fillRule={0}
                                    propList={
                                      Array [
                                        "fill",
                                        "fillRule",
                                      ]
                                    }
                                  >
                                    <RNSVGPath
                                      d="M19.703.558c3.784 0 6.852 3.137 6.852 7.008 0 .83-.142 1.642-.42 2.42a21.964 21.964 0 01-3.789 6.423.693.693 0 01-.992.072.732.732 0 01-.07-1.015 20.503 20.503 0 003.535-5.987c.217-.607.33-1.252.33-1.913 0-3.076-2.438-5.57-5.446-5.57-3.007 0-5.445 2.494-5.445 5.57 0 .959-1.406.959-1.406 0 0-3.077-2.437-5.57-5.444-5.57-3.008 0-5.446 2.494-5.446 5.57 0 .66.112 1.306.325 1.9 1.99 5.245 6.032 9.436 11.101 11.535l.163.065.284-.114a19.616 19.616 0 003.025-1.6l.478-.317a.692.692 0 01.975.196.729.729 0 01-.191.998 21.044 21.044 0 01-4.318 2.282.676.676 0 01-.39.032l-.096-.027-.053-.02C7.639 20.3 3.157 15.735.97 9.974a7.163 7.163 0 01-.415-2.408c0-3.87 3.068-7.008 6.853-7.008 2.648 0 4.946 1.537 6.086 3.787l.06.126.062-.126C14.724 2.16 16.924.646 19.477.562l.226-.004z"
                                      fill={
                                        Array [
                                          1,
                                          "prefix__a",
                                        ]
                                      }
                                      fillRule={1}
                                      matrix={
                                        Array [
                                          1,
                                          0,
                                          0,
                                          1,
                                          9,
                                          10,
                                        ]
                                      }
                                      propList={
                                        Array [
                                          "fill",
                                          "fillRule",
                                          "stroke",
                                          "strokeWidth",
                                        ]
                                      }
                                      stroke={
                                        Array [
                                          1,
                                          "prefix__a",
                                        ]
                                      }
                                      strokeWidth={0.5}
                                    />
                                    <RNSVGPath
                                      d="M0 0h44v44H0z"
                                    />
                                  </RNSVGGroup>
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                          </View>
                          <View
                            numberOfSpaces={6}
                            style={
                              Array [
                                Object {
                                  "width": 24,
                                },
                              ]
                            }
                          />
                        </View>
                        <View
                          numberOfSpaces={8}
                          style={
                            Array [
                              Object {
                                "height": 32,
                              },
                            ]
                          }
                        />
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "flexWrap": "wrap",
                                "justifyContent": "center",
                                "marginHorizontal": 24,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "marginRight": 4,
                                  },
                                ]
                              }
                            >
                              <RNSVGSvgView
                                align="xMidYMid"
                                bbHeight={16}
                                bbWidth={16}
                                focusable={false}
                                height={16}
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    Object {
                                      "flex": 0,
                                      "height": 16,
                                      "width": 16,
                                    },
                                  ]
                                }
                                vbHeight={16}
                                vbWidth={16}
                                width={16}
                              >
                                <RNSVGGroup>
                                  <RNSVGGroup
                                    fill={null}
                                    fillRule={0}
                                    propList={
                                      Array [
                                        "fill",
                                        "fillRule",
                                      ]
                                    }
                                  >
                                    <RNSVGGroup>
                                      <RNSVGGroup>
                                        <RNSVGPath
                                          d="M0 0L16 0 16 16 0 16z"
                                          matrix={
                                            Array [
                                              1,
                                              0,
                                              0,
                                              1,
                                              0,
                                              0,
                                            ]
                                          }
                                        />
                                        <RNSVGPath
                                          d="M2.667 4.667c0-.367.3-.667.666-.667H14c.367 0 .667-.3.667-.667 0-.366-.3-.666-.667-.666H2.667c-.734 0-1.334.6-1.334 1.333v7.333H1c-.553 0-1 .447-1 1 0 .554.447 1 1 1h8.333v-2H2.667V4.667zm12.666.666h-4c-.366 0-.666.3-.666.667v6.667c0 .366.3.666.666.666h4c.367 0 .667-.3.667-.666V6c0-.367-.3-.667-.667-.667zm-.666 6H12V6.667h2.667v4.666z"
                                          fill={4293591125}
                                          propList={
                                            Array [
                                              "fill",
                                            ]
                                          }
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGGroup>
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                            <Text
                              numberOfLines={1}
                              style={
                                Array [
                                  Object {
                                    "color": "#151515",
                                    "flexShrink": 1,
                                    "fontFamily": "Montserrat-SemiBold",
                                    "fontSize": 12,
                                    "lineHeight": 16,
                                    "textTransform": "capitalize",
                                  },
                                ]
                              }
                            >
                              FRANCE TELEVISIONS, 
                            </Text>
                          </View>
                          <Text
                            isDigital={true}
                            numberOfLines={1}
                            style={
                              Array [
                                Object {
                                  "color": "#151515",
                                  "fontFamily": "Montserrat-SemiBold",
                                  "fontSize": 12,
                                  "lineHeight": 16,
                                  "textTransform": "none",
                                },
                              ]
                            }
                          >
                            en ligne
                          </Text>
                        </View>
                        <View
                          numberOfSpaces={2}
                          style={
                            Array [
                              Object {
                                "height": 8,
                              },
                            ]
                          }
                        />
                        <View
                          style={
                            Array [
                              Object {
                                "marginHorizontal": 24,
                              },
                            ]
                          }
                        >
                          <Text
                            adjustsFontSizeToFit={true}
                            numberOfLines={3}
                            style={
                              Array [
                                Object {
                                  "color": "#151515",
                                  "fontFamily": "Montserrat-Bold",
                                  "fontSize": 20,
                                  "lineHeight": 24,
                                  "textAlign": "center",
                                },
                              ]
                            }
                            testID="offerTitle"
                          >
                            Web série : Simone et moi
                          </Text>
                        </View>
                        <View
                          numberOfSpaces={2}
                          style={
                            Array [
                              Object {
                                "height": 8,
                              },
                            ]
                          }
                        />
                        <View
                          style={
                            Array [
                              Object {
                                "flexDirection": "row",
                              },
                            ]
                          }
                        >
                          <View
                            numberOfSpaces={6}
                            style={
                              Array [
                                Object {
                                  "width": 24,
                                },
                              ]
                            }
                          />
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexBasis": 0,
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "paddingBottom": 4,
                                    "paddingLeft": 4,
                                    "paddingRight": 4,
                                    "paddingTop": 4,
                                  },
                                ]
                              }
                            >
                              <RNSVGSvgView
                                align="xMidYMid"
                                bbHeight={40}
                                bbWidth={40}
                                fill="#626262"
                                focusable={false}
                                height={40}
                                meetOrSlice={0}
                                minX={20}
                                minY={20}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    Object {
                                      "flex": 0,
                                      "height": 40,
                                      "width": 40,
                                    },
                                  ]
                                }
                                vbHeight={142}
                                vbWidth={142}
                                width={40}
                              >
                                <RNSVGGroup
                                  fill={4284637794}
                                  propList={
                                    Array [
                                      "fill",
                                    ]
                                  }
                                >
                                  <RNSVGPath
                                    d="M116.054 48.636c1.143 1.2 1.099 3.098-.1 4.242-1.2 1.143-3.098 1.099-4.242-.1-5.525-5.792-13.773-8.105-21.505-6.029-6.667 1.79-12.032 6.597-14.59 12.877l31.723 8.503c1.6.43 2.55 2.075 2.12 3.675-.393 1.467-1.808 2.387-3.273 2.2l-.4-.08-31.65-8.484c-.716 6.365 1.4 12.754 5.814 17.44l22.88 6.131c7.102-2.175 12.677-7.84 14.68-15.103.95-3.433 1.022-7.05.21-10.518-.377-1.613.625-3.227 2.239-3.604 1.613-.377 3.227.625 3.604 2.238 1.04 4.446.947 9.082-.269 13.48-2.705 9.807-10.522 17.329-20.351 19.693l-13.225 38.289c-1.62 4.693-6.384 7.46-11.156 6.663l-3.375 13.106c-.413 1.605-2.049 2.57-3.653 2.157-1.47-.378-2.405-1.784-2.232-3.252l.075-.401 3.6-13.984c-2.824-2.316-4.28-6.062-3.523-9.824l7.475-39.622-.128-.119c-7.307-6.856-10.38-17.12-8.02-26.882 2.397-9.915 10.018-17.729 19.87-20.374 9.851-2.645 20.36.302 27.402 7.682zM82.747 89.84l-7.403 39.26c-.425 2.113.836 4.202 2.816 4.785l.954.25c2.074.566 4.232-.573 4.933-2.606L97.115 93.69 82.747 89.84zm5.071 9.85c1.467.392 2.388 1.807 2.202 3.273l-.079.4-1.84 6.88c-.428 1.6-2.072 2.551-3.673 2.123-1.467-.392-2.388-1.807-2.202-3.273l.079-.4 1.84-6.88c.428-1.6 2.072-2.551 3.673-2.123z"
                                  />
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#151515",
                                    "fontFamily": "Montserrat-SemiBold",
                                    "fontSize": 12,
                                    "lineHeight": 16,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              Film
                            </Text>
                          </View>
                          <View
                            numberOfSpaces={6}
                            style={
                              Array [
                                Object {
                                  "width": 24,
                                },
                              ]
                            }
                          />
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </RCTScrollView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`<Offer /> should match snapshot for physical offer 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "zIndex": 1,
          },
          false,
        ]
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Offer
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTScrollView
                      style={
                        Array [
                          Object {},
                        ]
                      }
                    >
                      <View>
                        <View
                          customHeight={16}
                          style={
                            Array [
                              Object {
                                "height": 16,
                              },
                            ]
                          }
                        />
                        <View
                          style={
                            Array [
                              Object {
                                "flexBasis": 0,
                                "flexDirection": "row",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                            ]
                          }
                        >
                          <View
                            numberOfSpaces={6}
                            style={
                              Array [
                                Object {
                                  "width": 24,
                                },
                              ]
                            }
                          />
                          <View
                            accessible={true}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "alignItems": "center",
                                "aspectRatio": 1,
                                "backgroundColor": "#ffffff",
                                "borderColor": "#f5f5f5",
                                "borderRadius": 40,
                                "borderStyle": "solid",
                                "borderWidth": 1,
                                "justifyContent": "center",
                                "opacity": 1,
                                "shadowColor": "#151515",
                                "shadowOffset": Object {
                                  "height": 1,
                                  "width": 0,
                                },
                                "shadowOpacity": 0.15,
                                "shadowRadius": 1,
                                "width": 40,
                              }
                            }
                          >
                            <RNSVGSvgView
                              align="xMidYMid"
                              bbHeight={32}
                              bbWidth={32}
                              focusable={false}
                              height={32}
                              meetOrSlice={0}
                              minX={0}
                              minY={0}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "transparent",
                                    "borderWidth": 0,
                                  },
                                  Object {
                                    "flex": 0,
                                    "height": 32,
                                    "width": 32,
                                  },
                                ]
                              }
                              testID="icon-back"
                              vbHeight={32}
                              vbWidth={32}
                              width={32}
                            >
                              <RNSVGGroup>
                                <RNSVGGroup
                                  fill={null}
                                  propList={
                                    Array [
                                      "fill",
                                    ]
                                  }
                                >
                                  <RNSVGGroup
                                    fill={4279571733}
                                    propList={
                                      Array [
                                        "fill",
                                      ]
                                    }
                                  >
                                    <RNSVGGroup>
                                      <RNSVGGroup>
                                        <RNSVGPath
                                          d="M8.94 19.466c-.301.277-.778.266-1.065-.025-.287-.29-.276-.75.026-1.027l5.314-4.878c1.746-1.603 4.49-1.603 6.237 0l5.314 4.878c.302.277.313.737.026 1.027-.287.29-.764.302-1.065.025l-5.315-4.878c-1.164-1.069-2.993-1.069-4.158 0L8.94 19.466z"
                                          matrix={
                                            Array [
                                              -6.123233995736766e-17,
                                              1,
                                              1,
                                              6.123233995736766e-17,
                                              -0.3329999999999984,
                                              -0.3329999999999984,
                                            ]
                                          }
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGGroup>
                                </RNSVGGroup>
                              </RNSVGGroup>
                            </RNSVGSvgView>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "flexBasis": 0,
                                  "flexDirection": "row",
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                  "justifyContent": "flex-end",
                                },
                              ]
                            }
                          >
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "alignItems": "center",
                                  "aspectRatio": 1,
                                  "backgroundColor": "#ffffff",
                                  "borderColor": "#f5f5f5",
                                  "borderRadius": 40,
                                  "borderStyle": "solid",
                                  "borderWidth": 1,
                                  "justifyContent": "center",
                                  "opacity": 1,
                                  "shadowColor": "#151515",
                                  "shadowOffset": Object {
                                    "height": 1,
                                    "width": 0,
                                  },
                                  "shadowOpacity": 0.15,
                                  "shadowRadius": 1,
                                  "width": 40,
                                }
                              }
                            >
                              <RNSVGSvgView
                                align="xMidYMid"
                                bbHeight={32}
                                bbWidth={32}
                                fill="#151515"
                                focusable={false}
                                height={32}
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    Object {
                                      "flex": 0,
                                      "height": 32,
                                      "width": 32,
                                    },
                                  ]
                                }
                                testID="icon-share"
                                vbHeight={40}
                                vbWidth={40}
                                width={32}
                              >
                                <RNSVGGroup
                                  fill={4279571733}
                                  propList={
                                    Array [
                                      "fill",
                                    ]
                                  }
                                >
                                  <RNSVGPath
                                    d="M15.773 15.2c.346 0 .625.28.625.624 0 .317-.235.578-.54.62l-.085.005h-3.481c-.54 0-.983.41-1.037.936l-.005.106v11.625c0 .54.41.983.935 1.036l.107.006h15c.539 0 .983-.41 1.036-.935l.005-.107V17.491c0-.539-.41-.983-.935-1.036l-.106-.006h-3.034c-.345 0-.625-.28-.625-.625 0-.316.235-.577.54-.619l.085-.006h3.034c1.218 0 2.215.952 2.287 2.153l.004.14v11.624c0 1.219-.951 2.215-2.152 2.288l-.14.004h-15c-1.218 0-2.215-.951-2.287-2.152l-.004-.14V17.491c0-1.218.951-2.215 2.152-2.287l.14-.005h3.481zm4.065-8.532l.029.003c.024.003.049.008.073.013l.018.005c.024.007.049.015.073.025l.025.011c.05.023.097.053.14.09l.007.006.059.06 4.651 5.315c.228.26.201.655-.058.882-.237.207-.584.204-.816.006l-.066-.065-3.557-4.064v14.71c0 .345-.28.625-.625.625-.316 0-.578-.236-.619-.54l-.006-.085V8.955l-3.556 4.064c-.227.26-.622.286-.882.059-.236-.207-.28-.552-.114-.808l.055-.074 4.652-5.316.028-.03.03-.029.008-.006c.02-.017.034-.027.049-.037l-.056.043c.028-.024.057-.046.088-.064.014-.01.03-.017.045-.025s.03-.014.046-.02l.028-.011c.021-.007.043-.014.065-.019l.052-.01.039-.003h.095z"
                                  />
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                            <View
                              numberOfSpaces={3}
                              style={
                                Array [
                                  Object {
                                    "width": 12,
                                  },
                                ]
                              }
                            />
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "alignItems": "center",
                                  "aspectRatio": 1,
                                  "backgroundColor": "#ffffff",
                                  "borderColor": "#f5f5f5",
                                  "borderRadius": 40,
                                  "borderStyle": "solid",
                                  "borderWidth": 1,
                                  "justifyContent": "center",
                                  "opacity": 1,
                                  "shadowColor": "#151515",
                                  "shadowOffset": Object {
                                    "height": 1,
                                    "width": 0,
                                  },
                                  "shadowOpacity": 0.15,
                                  "shadowRadius": 1,
                                  "width": 40,
                                }
                              }
                            >
                              <RNSVGSvgView
                                align="xMidYMid"
                                bbHeight={32}
                                bbWidth={32}
                                focusable={false}
                                height={32}
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    Object {
                                      "flex": 0,
                                      "height": 32,
                                      "width": 32,
                                    },
                                  ]
                                }
                                testID="icon-favorite"
                                vbHeight={44}
                                vbWidth={44}
                                width={32}
                              >
                                <RNSVGGroup>
                                  <RNSVGDefs>
                                    <RNSVGLinearGradient
                                      gradient={
                                        Array [
                                          0,
                                          -15395563,
                                          1,
                                          -15395563,
                                        ]
                                      }
                                      gradientTransform={null}
                                      gradientUnits={0}
                                      name="prefix__a"
                                      x1="-42.969%"
                                      x2="153.672%"
                                      y1="52.422%"
                                      y2="52.422%"
                                    />
                                  </RNSVGDefs>
                                  <RNSVGGroup
                                    fill={null}
                                    fillRule={0}
                                    propList={
                                      Array [
                                        "fill",
                                        "fillRule",
                                      ]
                                    }
                                  >
                                    <RNSVGPath
                                      d="M19.703.558c3.784 0 6.852 3.137 6.852 7.008 0 .83-.142 1.642-.42 2.42a21.964 21.964 0 01-3.789 6.423.693.693 0 01-.992.072.732.732 0 01-.07-1.015 20.503 20.503 0 003.535-5.987c.217-.607.33-1.252.33-1.913 0-3.076-2.438-5.57-5.446-5.57-3.007 0-5.445 2.494-5.445 5.57 0 .959-1.406.959-1.406 0 0-3.077-2.437-5.57-5.444-5.57-3.008 0-5.446 2.494-5.446 5.57 0 .66.112 1.306.325 1.9 1.99 5.245 6.032 9.436 11.101 11.535l.163.065.284-.114a19.616 19.616 0 003.025-1.6l.478-.317a.692.692 0 01.975.196.729.729 0 01-.191.998 21.044 21.044 0 01-4.318 2.282.676.676 0 01-.39.032l-.096-.027-.053-.02C7.639 20.3 3.157 15.735.97 9.974a7.163 7.163 0 01-.415-2.408c0-3.87 3.068-7.008 6.853-7.008 2.648 0 4.946 1.537 6.086 3.787l.06.126.062-.126C14.724 2.16 16.924.646 19.477.562l.226-.004z"
                                      fill={
                                        Array [
                                          1,
                                          "prefix__a",
                                        ]
                                      }
                                      fillRule={1}
                                      matrix={
                                        Array [
                                          1,
                                          0,
                                          0,
                                          1,
                                          9,
                                          10,
                                        ]
                                      }
                                      propList={
                                        Array [
                                          "fill",
                                          "fillRule",
                                          "stroke",
                                          "strokeWidth",
                                        ]
                                      }
                                      stroke={
                                        Array [
                                          1,
                                          "prefix__a",
                                        ]
                                      }
                                      strokeWidth={0.5}
                                    />
                                    <RNSVGPath
                                      d="M0 0h44v44H0z"
                                    />
                                  </RNSVGGroup>
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                          </View>
                          <View
                            numberOfSpaces={6}
                            style={
                              Array [
                                Object {
                                  "width": 24,
                                },
                              ]
                            }
                          />
                        </View>
                        <View
                          numberOfSpaces={8}
                          style={
                            Array [
                              Object {
                                "height": 32,
                              },
                            ]
                          }
                        />
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "flexWrap": "wrap",
                                "justifyContent": "center",
                                "marginHorizontal": 24,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "marginRight": 4,
                                  },
                                ]
                              }
                            >
                              <RNSVGSvgView
                                align="xMidYMid"
                                bbHeight={16}
                                bbWidth={16}
                                focusable={false}
                                height={16}
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    Object {
                                      "flex": 0,
                                      "height": 16,
                                      "width": 16,
                                    },
                                  ]
                                }
                                vbHeight={16}
                                vbWidth={16}
                                width={16}
                              >
                                <RNSVGGroup>
                                  <RNSVGGroup
                                    fill={null}
                                    propList={
                                      Array [
                                        "fill",
                                      ]
                                    }
                                  >
                                    <RNSVGGroup
                                      fill={4293591125}
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                    >
                                      <RNSVGGroup>
                                        <RNSVGPath
                                          d="M7.812 3l.164.005.118.002c.538.021 1.064.165 1.544.425l.12.068c1.393.894 1.949 2.648 1.315 4.19l-2.396 4.994c-.104.193-.307.316-.53.316-.242 0-.46-.144-.542-.34L4.97 7.833c-.942-2.12.41-4.622 2.679-4.828.109-.007.218-.007.327 0zM8 4.667c-.92 0-1.667.746-1.667 1.666C6.333 7.253 7.08 8 8 8s1.667-.746 1.667-1.667c0-.92-.747-1.666-1.667-1.666z"
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGGroup>
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                            <Text
                              numberOfLines={1}
                              style={
                                Array [
                                  Object {
                                    "color": "#151515",
                                    "flexShrink": 1,
                                    "fontFamily": "Montserrat-SemiBold",
                                    "fontSize": 12,
                                    "lineHeight": 16,
                                    "textTransform": "capitalize",
                                  },
                                ]
                              }
                            >
                              La Passerelle scène nationale de Saint-Brieuc, 
                            </Text>
                          </View>
                          <Text
                            isDigital={false}
                            numberOfLines={1}
                            style={
                              Array [
                                Object {
                                  "color": "#151515",
                                  "fontFamily": "Montserrat-SemiBold",
                                  "fontSize": 12,
                                  "lineHeight": 16,
                                  "textTransform": "capitalize",
                                },
                              ]
                            }
                          >
                            SAINT BRIEUC
                          </Text>
                        </View>
                        <View
                          numberOfSpaces={2}
                          style={
                            Array [
                              Object {
                                "height": 8,
                              },
                            ]
                          }
                        />
                        <View
                          style={
                            Array [
                              Object {
                                "marginHorizontal": 24,
                              },
                            ]
                          }
                        >
                          <Text
                            adjustsFontSizeToFit={true}
                            numberOfLines={3}
                            style={
                              Array [
                                Object {
                                  "color": "#151515",
                                  "fontFamily": "Montserrat-Bold",
                                  "fontSize": 20,
                                  "lineHeight": 24,
                                  "textAlign": "center",
                                },
                              ]
                            }
                            testID="offerTitle"
                          >
                            Mad in Finland
                          </Text>
                        </View>
                        <View
                          numberOfSpaces={2}
                          style={
                            Array [
                              Object {
                                "height": 8,
                              },
                            ]
                          }
                        />
                        <View
                          style={
                            Array [
                              Object {
                                "flexDirection": "row",
                              },
                            ]
                          }
                        >
                          <View
                            numberOfSpaces={6}
                            style={
                              Array [
                                Object {
                                  "width": 24,
                                },
                              ]
                            }
                          />
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexBasis": 0,
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "paddingBottom": 4,
                                    "paddingLeft": 4,
                                    "paddingRight": 4,
                                    "paddingTop": 4,
                                  },
                                ]
                              }
                            >
                              <RNSVGSvgView
                                align="xMidYMid"
                                bbHeight={40}
                                bbWidth={40}
                                fill="#626262"
                                focusable={false}
                                height={40}
                                meetOrSlice={0}
                                minX={20}
                                minY={20}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    Object {
                                      "flex": 0,
                                      "height": 40,
                                      "width": 40,
                                    },
                                  ]
                                }
                                vbHeight={142}
                                vbWidth={142}
                                width={40}
                              >
                                <RNSVGGroup
                                  fill={4284637794}
                                  propList={
                                    Array [
                                      "fill",
                                    ]
                                  }
                                >
                                  <RNSVGPath
                                    d="M99.238 73H108c6.075 0 11 4.925 11 11v60c0 6.075-4.925 11-11 11l-8.74-.002c-3.159-.105-5.855-2.314-6.56-5.31-1.045-3.947-4.617-6.696-8.7-6.696-4.083 0-7.655 2.75-8.68 6.616-.725 3.076-3.421 5.285-6.68 5.392H60c-6.075 0-11-4.925-11-11V84c0-6.075 4.925-11 11-11h8.552c3.273.05 6.088 2.366 6.698 5.395 1.084 3.892 4.63 6.585 8.67 6.585s7.586-2.693 8.62-6.38c.676-3.311 3.621-5.668 6.94-5.6zm.182 6c-.483-.01-.904.326-1.05 1.005l-.236.769c-2.045 6.07-7.75 10.206-14.214 10.206-6.734 0-12.643-4.488-14.5-11.18-.096-.474-.517-.81-1.06-.8H60c-2.761 0-5 2.239-5 5v60c0 2.761 2.239 5 5 5l8.54.002c.451-.015.836-.33.96-.85 1.742-6.578 7.695-11.16 14.5-11.16s12.758 4.582 14.52 11.24c.104.44.489.755.84.768H108c2.761 0 5-2.239 5-5V84c0-2.761-2.239-5-5-5zM86.918 45.13l.826.203 8.534 2.185c3.088.898 5.168 3.786 5.04 6.783.131 4.007 2.895 7.444 6.808 8.438 3.994 1.055 8.206-.645 10.293-4.079 1.405-2.524 4.201-3.908 7.112-3.516l.625.112 8.519 2.22c2.833.654 5.28 2.431 6.777 4.924 1.361 2.266 1.833 4.946 1.336 7.547l-.178.777-13.12 47.12c-.444 1.596-2.099 2.53-3.695 2.085-1.463-.407-2.37-1.831-2.168-3.295l.083-.4 13.112-47.091c.332-1.237.146-2.555-.513-3.653-.565-.94-1.437-1.65-2.512-2.027l-.553-.16-8.493-2.215c-.431-.096-.875.104-1.146.587-3.523 5.805-10.446 8.6-16.983 6.872-6.476-1.645-11.083-7.373-11.3-14.267.015-.368-.172-.705-.426-.878l-.2-.097-8.528-2.184c-1.28-.37-2.654-.213-3.818.435-.998.555-1.77 1.432-2.184 2.428l-.177.507-3.08 12.24c-.404 1.607-2.034 2.582-3.641 2.177-1.473-.37-2.415-1.771-2.25-3.24l.073-.401 3.101-12.32c.794-2.821 2.68-5.209 5.24-6.634 2.305-1.282 4.985-1.69 7.486-1.183zM100 103c1.657 0 3 1.343 3 3 0 1.519-1.129 2.774-2.593 2.973L100 109H68c-1.657 0-3-1.343-3-3 0-1.519 1.129-2.774 2.593-2.973L68 103h32z"
                                  />
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#151515",
                                    "fontFamily": "Montserrat-SemiBold",
                                    "fontSize": 12,
                                    "lineHeight": 16,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              Spectacle
                            </Text>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "backgroundColor": "#c7c7cc",
                                  "marginHorizontal": 8,
                                  "width": 1,
                                },
                              ]
                            }
                          />
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexBasis": 0,
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "paddingBottom": 4,
                                    "paddingLeft": 4,
                                    "paddingRight": 4,
                                    "paddingTop": 4,
                                  },
                                ]
                              }
                            >
                              <RNSVGSvgView
                                align="xMidYMid"
                                bbHeight={40}
                                bbWidth={40}
                                fill="#626262"
                                focusable={false}
                                height={40}
                                meetOrSlice={0}
                                minX={4}
                                minY={0}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    Object {
                                      "flex": 0,
                                      "height": 40,
                                      "width": 40,
                                    },
                                  ]
                                }
                                testID="iconDuo"
                                vbHeight={40}
                                vbWidth={40}
                                width={40}
                              >
                                <RNSVGGroup
                                  fill={4284637794}
                                  propList={
                                    Array [
                                      "fill",
                                    ]
                                  }
                                >
                                  <RNSVGPath
                                    d="M32.4 17c4.197 0 7.6 3.358 7.6 7.5 0 4.142-3.403 7.5-7.6 7.5H15.6C11.403 32 8 28.642 8 24.5c0-4.142 3.403-7.5 7.6-7.5h16.8zm0 1.579H15.6c-3.314 0-6 2.65-6 5.921 0 3.27 2.686 5.921 6 5.921h16.8c3.314 0 6-2.65 6-5.921 0-3.27-2.686-5.921-6-5.921zM31.84 20c.63 0 1.183.131 1.657.394.475.263.845.632 1.108 1.108.263.476.395 1.022.395 1.64v2.679c0 .625-.132 1.18-.395 1.664s-.633.858-1.108 1.12c-.474.264-1.027.395-1.658.395-.622 0-1.171-.134-1.646-.4-.475-.268-.844-.641-1.107-1.12-.264-.48-.396-1.034-.396-1.66v-2.678c0-.618.132-1.164.396-1.64.263-.476.632-.845 1.107-1.108.475-.263 1.024-.394 1.646-.394zm-9.016.1c.136 0 .203.071.203.213v5.658c0 .442.13.799.39 1.07.259.271.6.407 1.023.407.423 0 .764-.136 1.024-.407.26-.271.389-.628.389-1.07v-5.658c0-.142.068-.213.203-.213h1.282c.135 0 .203.071.203.213v5.645c0 .593-.13 1.116-.39 1.571-.258.455-.622.808-1.089 1.058-.467.25-1.007.375-1.622.375-.614 0-1.155-.125-1.622-.375-.467-.25-.83-.603-1.09-1.058-.26-.455-.389-.978-.389-1.57v-5.646c0-.142.068-.213.204-.213h1.28zm-5.687 0c.598 0 1.123.11 1.574.332.451.221.8.532 1.048.932.247.401.371.864.371 1.39v3.455c0 .525-.124.988-.371 1.39-.248.4-.597.71-1.048.932-.45.22-.976.331-1.574.331h-2.933c-.136 0-.204-.07-.204-.212v-8.337c0-.142.068-.213.204-.213h2.933zm14.702 1.415c-.439 0-.792.148-1.06.444-.267.296-.4.686-.4 1.17v2.754c0 .484.133.872.4 1.164.268.292.621.438 1.06.438.44 0 .794-.146 1.066-.438.271-.292.407-.68.407-1.164V23.13c0-.484-.134-.874-.401-1.17-.268-.296-.625-.444-1.072-.444zm-14.654.1H15.76c-.048 0-.072.025-.072.075v5.583c0 .05.024.075.072.075h1.437c.367 0 .664-.13.892-.388.227-.259.345-.605.353-1.04v-2.878c0-.434-.114-.78-.341-1.04-.228-.258-.533-.387-.916-.387z"
                                  />
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#151515",
                                    "fontFamily": "Montserrat-SemiBold",
                                    "fontSize": 12,
                                    "lineHeight": 16,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              À deux !
                            </Text>
                          </View>
                          <View
                            numberOfSpaces={6}
                            style={
                              Array [
                                Object {
                                  "width": 24,
                                },
                              ]
                            }
                          />
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </RCTScrollView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
